// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Artifact Modal tests inital Render 1`] = `
<div
  class="bp3-dialog selectArtifactModal padded-dialog"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    >
      pipeline.triggers.artifactTriggerConfigPanel.configureArtifactRuntimeInputs
    </h4>
    <button
      aria-label="Close"
      class="bp3-button bp3-minimal bp3-dialog-close-button"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-small-cross"
        icon="small-cross"
      >
        <svg
          data-icon="small-cross"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <desc>
            small-cross
          </desc>
          <path
            d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="nopadLeft accordionSummary"
    id="Stage.undefined.Service.Manifests"
  />
  <div
    class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main footer"
  >
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        filters.apply
      </span>
    </button>
    <p
      class="StyledProps--font StyledProps--main cancel"
    >
      cancel
    </p>
  </div>
</div>
`;

exports[`Select Artifact Modal tests when selected manifest-chart is not runtime input 1`] = `
<div
  class="bp3-dialog selectArtifactModal padded-dialog"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    >
      pipeline.triggers.artifactTriggerConfigPanel.selectAManifest
    </h4>
    <button
      aria-label="Close"
      class="bp3-button bp3-minimal bp3-dialog-close-button"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-small-cross"
        icon="small-cross"
      >
        <svg
          data-icon="small-cross"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <desc>
            small-cross
          </desc>
          <path
            d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="table selectArtifactTable"
  >
    <div
      class="header"
      role="row"
    >
      <div
        class="cell"
        colspan="1"
        role="columnheader"
        style="width: 5%;"
      >
        
      </div>
      <div
        class="cell"
        colspan="1"
        role="columnheader"
        style="width: 27%;"
      >
        MANIFESTSTEXT
      </div>
      <div
        class="cell"
        colspan="1"
        role="columnheader"
        style="width: 25%;"
      >
        PIPELINE.TRIGGERS.ARTIFACTTRIGGERCONFIGPANEL.ARTIFACTREPOSITORY
      </div>
      <div
        class="cell"
        colspan="1"
        role="columnheader"
        style="width: 18%;"
      >
        COMMON.LOCATION
      </div>
      <div
        class="cell"
        colspan="1"
        role="columnheader"
        style="width: 16%;"
      >
        VERSION
      </div>
      <div
        class="cell"
        colspan="1"
        role="columnheader"
        style="width: 9%;"
      >
        PIPELINE.TRIGGERS.ARTIFACTTRIGGERCONFIGPANEL.HASRUNTIMEINPUTS
      </div>
    </div>
    <div
      class="body"
    >
      <div
        class="row card clickable"
        role="row"
      >
        <div
          class="cell"
          role="cell"
          style="width: 5%;"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main disabledRow"
            style="justify-content: center;"
          >
            <div>
              <label
                class="bp3-label"
              />
              <label
                class="bp3-control bp3-radio bp3-disabled"
              >
                <input
                  disabled=""
                  name="artifactLabel"
                  type="radio"
                  value="stagea: testhelmmanifest"
                />
                <span
                  class="bp3-control-indicator"
                />
              </label>
            </div>
          </div>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 27%;"
        >
          <div
            class="Layout--horizontal StyledProps--main disabledRow"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main"
              style="--text-line-clamp: 1; width: 176px;"
            >
              stagea: testhelmmanifest
            </p>
          </div>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 25%;"
        >
          <div
            class="Layout--horizontal StyledProps--main disabledRow"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main"
              style="--text-line-clamp: 1; width: 159px;"
            >
              testecr2
            </p>
          </div>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 18%;"
        >
          <div
            class="Layout--horizontal StyledProps--main disabledRow"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main"
              style="min-height: 18px; --text-line-clamp: 1; width: 110px;"
            >
              Runtime Input
            </p>
          </div>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 16%;"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main disabledRow"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main"
              style="min-height: 18px; --text-line-clamp: 1;"
            >
              Runtime Input
            </p>
          </div>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 9%;"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main disabledRow"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              Yes
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <p
    class="StyledProps--font StyledProps--main"
    style="color: rgb(255, 123, 38);"
  >
    pipeline.triggers.artifactTriggerConfigPanel.chartVersionRuntimeInput
  </p>
  
  <div
    class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main footer"
  >
    <button
      class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      data-name="selectBtn"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        select
      </span>
    </button>
    <p
      class="StyledProps--font StyledProps--main cancel"
    >
      cancel
    </p>
  </div>
</div>
`;
